--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,11 @@ jobs:
       run: |
         cd src
         make
+        echo "Creating directory for the binary"
         mkdir -p artifacts/usr/bin
+        echo "Copying binary file to the artifacts directory"
         cp main artifacts/usr/bin/
-
-    - name: Check if main binary exists
-      run: |
+        echo "List contents of artifacts/usr/bin"
         ls -l artifacts/usr/bin/
 
     - name: Run tests
