--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,11 +39,8 @@ jobs:
     
       - name: Run tests
         run: |
-          ls -a
-          ls -l
-          cd cicd
-          chmod +x test_script.sh
-          test_script.sh
+          chmod +x cicd/test_script.sh
+          cicd/test_script.sh
   package:
     runs-on: ubuntu-latest
     needs: test
