--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: main
-        path: usr/bin/main
+        path: artifacts/usr/bin/main
         
   test:
     runs-on: ubuntu-latest
