--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,13 +37,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Download build artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: main
     
       - name: Run tests
         run: |
           chmod +x cicd/test_script.sh
           cicd/test_script.sh
+  
   package:
     runs-on: ubuntu-latest
     needs: test
