--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,8 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: main
-    
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Run tests
         run: |
           chmod +x cicd/test_script.sh
