--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           
       - name: Run tests
         run: |
+          cd main
           ls -a
           chmod +x cicd/test_script.sh
           cicd/test_script.sh
