--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,11 +90,11 @@ jobs:
           
       - name: Build Docker image
         run: |
-          docker build -t my-app .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/fibonacci-app:latest .
 
       - name: Run Docker container
         run: |
-          docker run my-app
+          docker run ${{ secrets.DOCKER_USERNAME }}/fibonacci-app:latest
       
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
